# krunner-bazaar

./: .containerignore  CMakeLists.txt  Containerfile  Justfile  Messages.sh  README.md  io.github.ublueos.bazaarrunner.desktop  io.github.ublueos.bazaarrunner.yaml  krunner-bazaar.spec
.github/workflows/: build.yml  release.yml
po/: README.md  plasma_runner_bazaarrunner.pot
po/ar/: plasma_runner_bazaarrunner.po
po/de/: plasma_runner_bazaarrunner.po
po/es/: plasma_runner_bazaarrunner.po
po/pl/: plasma_runner_bazaarrunner.po
po/ru/: plasma_runner_bazaarrunner.po
src/: CMakeLists.txt  bazaar-dbus-tool.cpp  bazaar-test.cpp  bazaarclient.cpp  bazaarclient.h  bazaarrunner.cpp  bazaarrunner.h  bazaarrunner.json
